<resources>
    <string name="app_name">MOBI MARKET</string>
    <string name="title_main">Главная</string>
    <string name="title_wallet">Кошелёк</string>
    <string name="title_chat">Чаты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Профиль</string>
    <string name="liked">Понравившиеся</string>
    <string name="user_name">Имя пользоветеля</string>
    <string name="my_goods">Мои товары</string>
    <string name="change">Изм.</string>
    <string name="log_out">Выйти</string>
    <string name="finish_registration">Закончить регистрацию</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="further">Далее</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="register">Регистрация</string>
    <string name="email">Почта</string>
    <string name="password_requires_description"><![CDATA[Минимальная длина — 8 символов. Для надежности пароль должен содержать буквы и цифры.]]></string>
    <string name="create_a_new_password">Придумайте пароль</string>
    <string name="oops_empty">Ой, пусто!</string>
    <string name="cancel">Отмена</string>
    <string name="ready">Готово</string>
    <string name="choose_photo">Выбрать фотографию</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="surname">Отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="add_phone_number">Добавить номер</string>
</resources>