<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kg.mamafo.mobimarket.presentation.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="kg.mamafo.mobimarket.presentation.ui.dashboard.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="kg.mamafo.mobimarket.presentation.ui.notifications.ChatsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chats" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="kg.mamafo.mobimarket.presentation.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>