<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.finish_registration.FinishRegistrationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_in_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/main_silver_btn_color"
            app:cornerRadius="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ready_in_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/ready"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/main_silver_btn_color"
            app:cornerRadius="50dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_choose_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/choose_photo"
        android:textColor="@color/main_blue"
        android:textSize="17sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_liked_my_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_photo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_first_name"
                android:backgroundTint="@color/white"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_last_name"
                android:backgroundTint="@color/white"
                android:hint="@string/surname"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_surname"
                android:backgroundTint="@color/white"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/birthday"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_add_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_liked_my_products"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_add_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/add_phone_number"
                android:textColor="@color/main_blue"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phone_number_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_add_phone_number"
                android:layout_alignBottom="@id/tv_add_phone_number"
                android:layout_toEndOf="@id/tv_add_phone_number"
                android:gravity="center_vertical"
                android:text="0(000) 00-00-00"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_add_phone_number"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="example@example.com"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>