<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_in_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/main_silver_btn_color"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_liked_my_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_favorite_products"
                style="@style/btn_profile_liked_mygoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/liked"
                app:backgroundTint="@color/white"
                app:drawableStartCompat="@drawable/frame_liked_profilee"
                app:iconTintMode="multiply" />

            <ImageView
                android:id="@+id/image_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_favorite_products"
                android:layout_alignBottom="@id/tv_favorite_products"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right30" />

            <TextView
                android:id="@+id/tv_my_goods"
                style="@style/btn_profile_liked_mygoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_favorite_products"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/my_goods"
                app:backgroundTint="@color/white"
                app:drawableStartCompat="@drawable/mygoods"
                app:iconTintMode="multiply" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_my_goods"
                android:layout_alignBottom="@id/tv_my_goods"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right30" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_liked_my_products"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:drawableStartCompat="@drawable/ic_log_out"
                app:iconTintMode="multiply" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_log_out"
                android:layout_alignBottom="@+id/tv_log_out"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right30" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/finish_registration"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/main_blue"
        app:cornerRadius="30dp" />

</RelativeLayout>