<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.sign_up.SignUpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgr_image_back"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:src="@drawable/ic_left_24" />

        <TextView
            android:id="@+id/tv_register_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_username_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <ImageView
            android:id="@+id/image_main_logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/main_logo2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_main_logo"
            android:layout_marginTop="@dimen/user_name_margin_top">

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/user_name"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_user_name"
            android:layout_marginTop="@dimen/password_margin_top">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_email"
            android:layout_marginHorizontal="@dimen/enter_login_margin_horizontal"
            android:layout_marginTop="@dimen/user_name_margin_top"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:backgroundTint="@color/main_blue"
            app:cornerRadius="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_password_logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_password_gate" />

        <TextView
            android:id="@+id/tv_create_a_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_password_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/create_a_new_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_create_a_password"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="40dp"
            android:text="@string/password_requires_description"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_password_description"
            android:layout_marginTop="@dimen/user_name_margin_top"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_password"
            android:layout_marginTop="@dimen/password_margin_top"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
</RelativeLayout>